# cats-against.humanity

./: .gitattributes  CMakeLists.txt  README.md  cats.txt  clase.cpp  clase.h  main.cpp  tastatura.txt
Headers/: Actions.h  Cat.h  CatOverlord.h  Exceptions.h  GameSettings.h  GenericTracker.h  Humanity.h  Mission.h  Utils.h
src/: Actions.cpp  Cat.cpp  CatOverlord.cpp  Humanity.cpp  Mission.cpp  main.cpp
